// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`npm icon render custom class 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-npm lucide-Npm custom-class"
    aria-hidden="true"
  >
    <path
      d="M2 22V2H22V22H2Z"
      fill="#C12127"
      stroke-width="0"
    >
    </path>
    <path
      d="M5.75 5.75H18.25V18.25H15.75V8.25H12V18.25H5.75V5.75Z"
      fill="#fafafa"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;

exports[`npm icon render default 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-npm lucide-Npm"
    aria-hidden="true"
  >
    <path
      d="M2 22V2H22V22H2Z"
      fill="#C12127"
      stroke-width="0"
    >
    </path>
    <path
      d="M5.75 5.75H18.25V18.25H15.75V8.25H12V18.25H5.75V5.75Z"
      fill="#fafafa"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;
